# Lithium

./: .gitignore  LICENSE  Lithium.c  Lithium.h  Makefile.am  README.md  configure.ac
doc/: MakeMarkdown  Matrix.md  Scalar.md  Symbols.doco  Vector.md
src/: Makefile.am  lithium.c  lithium.h
test/: Makefile.am  dot_cross.c  length_normalize.c  matrix_invert.c  matrix_make.c  plane.c  reflect.c  rotate.c  scalar.c  test.h  vector.c  vector_arithmetic.c  vector_make.c
